# gummypy

./: .gitignore  LICENSE  README.md  gum.py  main.py  pyproject.toml
src/: __init__.py  flags.py  gum.py  gummypy.py  lib.py  refactor.py  test.json
src/gummypy/: __init__.py  flags.py
tests/: unit_tests.py
