[build-system]
requires = ["setuptools>=77.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gummypy"
version = "0.1.2"
description = "A simple library that contains wrapper functions for gum CLI tool"
authors = [{ name = "sereinne", email = "akbarsmp27@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
license-files = ["LICENSE"]
keywords = [ "CLI" ]
dependencies = []

[project.urls]
Homepage = "https://github.com/sereinne/gummypy"
Repository = "https://github.com/sereinne/gummypy"
Issues = "https://github.com/sereinne/gummypy/issues"
